--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -264,16 +264,85 @@ I used the \textbf{knitr}\index{knitr} package \citep{xie2015} and the \textbf{b
 ## Locale: en_CA.UTF-8 / en_CA.UTF-8 / en_CA.UTF-8 / C / en_CA.UTF-8 / en_CA.UTF-8
 ## 
 ## Package version:
-##   base64enc_0.1.3 bookdown_0.19.1 compiler_4.0.2 
-##   digest_0.6.25   evaluate_0.14   glue_1.4.1     
-##   graphics_4.0.2  grDevices_4.0.2 highr_0.8      
-##   htmltools_0.4.0 jsonlite_1.6.1  knitr_1.28     
-##   magrittr_1.5    markdown_1.1    methods_4.0.2  
-##   mime_0.9        packrat_0.5.0   Rcpp_1.0.5     
-##   rlang_0.4.7     rmarkdown_2.2   rstudioapi_0.11
-##   stats_4.0.2     stringi_1.4.6   stringr_1.4.0  
-##   tinytex_0.23    tools_4.0.2     utils_4.0.2    
-##   xfun_0.14       yaml_2.2.1
+##   abind_1.4.5              acepack_1.4.1           
+##   arm_1.11.1               askpass_1.1             
+##   assertthat_0.2.1         backports_1.1.8         
+##   base64enc_0.1-3          BH_1.72.0.3             
+##   bitops_1.0-6             bookdown_0.19.1         
+##   boot_1.3.25              broom_0.7.0.9000        
+##   callr_3.4.3              cellranger_1.1.0        
+##   checkmate_2.0.0          cli_2.0.2               
+##   clipr_0.7.0              cluster_2.1.0           
+##   coda_0.19.3              colorspace_1.4-1        
+##   compiler_4.0.2           crayon_1.3.4            
+##   curl_4.3                 data.table_1.12.8       
+##   DBI_1.1.0                dbplyr_1.4.3            
+##   desc_1.2.0               digest_0.6.25           
+##   dplyr_1.0.0              ellipsis_0.3.1          
+##   emoGG_0.0.2              evaluate_0.14           
+##   fansi_0.4.1              farver_2.0.3            
+##   forcats_0.5.0            foreign_0.8-80          
+##   Formula_1.2-3            fs_1.4.1                
+##   generics_0.0.2           ggplot2_3.3.2           
+##   glue_1.4.1               graphics_4.0.2          
+##   grDevices_4.0.2          grid_4.0.2              
+##   gridExtra_2.3            gsl_2.1.6               
+##   gtable_0.3.0             haven_2.3.1             
+##   highr_0.8                Hmisc_4.4-0             
+##   hms_0.5.3                htmlTable_2.0.0         
+##   htmltools_0.4.0          htmlwidgets_1.5.1       
+##   httr_1.4.1               isoband_0.2.2           
+##   janitor_2.0.1            jpeg_0.1-8.1            
+##   jsonlite_1.6.1           knitr_1.28              
+##   labeling_0.3             lattice_0.20-41         
+##   latticeExtra_0.6-29      lavaan_0.6.6            
+##   learnSampling_0.2        lifecycle_0.2.0         
+##   lme4_1.1.23              lubridate_1.7.8         
+##   magrittr_1.5             markdown_1.1            
+##   MASS_7.3.51.6            Matrix_1.2-18           
+##   matrixcalc_1.0.3         MBESS_4.7.0             
+##   methods_4.0.2            mgcv_1.8.31             
+##   mi_1.0                   mime_0.9                
+##   minqa_1.2.4              mnormt_2.0.1            
+##   modelr_0.1.8             munsell_0.5.0           
+##   mvtnorm_1.1.1            nlme_3.1-148            
+##   nloptr_1.2.2.2           nnet_7.3-14             
+##   numDeriv_2016.8.1.1      OpenMx_2.17.4           
+##   openssl_1.4.1            packrat_0.5.0           
+##   parallel_4.0.2           pbapply_1.4.2           
+##   pbivnorm_0.6.0           pillar_1.4.6            
+##   pkgbuild_1.1.0           pkgconfig_2.0.3         
+##   pkgload_1.1.0            png_0.1-7               
+##   praise_1.0.0             predictionInterval_1.0.0
+##   prettyunits_1.1.1        processx_3.4.3          
+##   progress_1.2.2           proto_1.0.0             
+##   ps_1.3.3                 psych_1.9.12.31         
+##   purrr_0.3.4              R6_2.4.1                
+##   RColorBrewer_1.1-2       Rcpp_1.0.5              
+##   RcppEigen_0.3.3.7.0      RcppParallel_5.0.2      
+##   RCurl_1.98-1.2           readr_1.3.1             
+##   readxl_1.3.1             rematch_1.0.1           
+##   repr_1.1.0               reprex_0.3.0            
+##   rlang_0.4.7              rmarkdown_2.2           
+##   rpart_4.1-15             rpf_1.0.4               
+##   rprojroot_1.3.2          rstudioapi_0.11         
+##   rvest_0.3.5              scales_1.1.1            
+##   selectr_0.4.2            sem_3.1.11              
+##   semTools_0.5.3           skimr_2.1.1             
+##   snakecase_0.11.0         splines_4.0.2           
+##   StanHeaders_2.21.0.5     statmod_1.4.34          
+##   stats_4.0.2              stats4_4.0.2            
+##   stringi_1.4.6            stringr_1.4.0           
+##   survival_3.1-12          sys_3.3                 
+##   testthat_2.3.2           tibble_3.0.3            
+##   tidyr_1.1.0              tidyselect_1.1.0        
+##   tidyverse_1.3.0          tinytex_0.23            
+##   tmvnsim_1.0-2            tools_4.0.2             
+##   utf8_1.1.4               utils_4.0.2             
+##   vctrs_0.3.2              viridis_0.5.1           
+##   viridisLite_0.3.0        whisker_0.4             
+##   withr_2.2.0              xfun_0.14               
+##   xml2_1.3.2               yaml_2.2.1
 \end{verbatim}
 
 Package names are in bold text (e.g., \textbf{rmarkdown}), and inline code and filenames are formatted in a typewriter font (e.g., \texttt{knitr::knit(\textquotesingle{}foo.Rmd\textquotesingle{})}). Function names are followed by parentheses (e.g., \texttt{bookdown::render\_book()}).
@@ -517,23 +586,6 @@ The tidyverse is now installed, so we need to activate it. We do that with the l
 \subsection{Activate tidyverse auto-complete for your script}\label{activate-tidyverse-auto-complete-for-your-script}}
 
 Select the library(tidyverse) text with your mouse/track-pad so that it is highlighted. Then click the Run button in the upper right of the Script panel. Doing this ``runs'' the selected text. After you click the Run button you should see text like the following the Console panel:
-
-\begin{verbatim}
-## -- Attaching packages ------------------- tidyverse 1.3.0 --
-\end{verbatim}
-
-\begin{verbatim}
-## v ggplot2 3.3.2     v purrr   0.3.4
-## v tibble  3.0.3     v dplyr   1.0.0
-## v tidyr   1.1.0     v stringr 1.4.0
-## v readr   1.3.1     v forcats 0.5.0
-\end{verbatim}
-
-\begin{verbatim}
-## -- Conflicts ---------------------- tidyverse_conflicts() --
-## x dplyr::filter() masks stats::filter()
-## x dplyr::lag()    masks stats::lag()
-\end{verbatim}
 
 When you use library(tidyverse) to activate the tidyverse you activate the most commonly used subset of the tidyverse packages. In the output you see checkmarks beside names of the tidyverse packages you have activated.
 
@@ -5843,7 +5895,7 @@ Use geom\_col() to put each boxoffice column value into a bar.
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-239-1.pdf}
+\includegraphics[width=0.65\linewidth]{bookdown_files/figure-latex/unnamed-chunk-239-1}
 
 Next, we want to put the boxoffice revenue above each bar so it easier to interpret. In R terms, we are putting a label above each bar. We want the contents for the labels to come from the boxoffice column. Therefore, we add the geom\_text() command below:
 
@@ -5861,7 +5913,7 @@ Next, we want to put the boxoffice revenue above each bar so it easier to interp
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-240-1.pdf}
+\includegraphics[width=0.65\linewidth]{bookdown_files/figure-latex/unnamed-chunk-240-1}
 
 Unfortunately, when we position the text at the exact height of each column it overlaps with the column making it difficult to read. We fix this on the next page using nudge\_y.
 
@@ -5883,7 +5935,7 @@ We can nudge each label higher on the y-axis using the \emph{nudge\_y} command. 
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-241-1.pdf}
+\includegraphics[width=0.65\linewidth]{bookdown_files/figure-latex/unnamed-chunk-241-1}
 
 \hypertarget{graphing-efficiently}{%
 \section{Graphing efficiently}\label{graphing-efficiently}}
@@ -5905,7 +5957,7 @@ Examine the code below and compare it to the code above. Notice how in the geom\
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-242-1.pdf}
+\includegraphics[width=0.65\linewidth]{bookdown_files/figure-latex/unnamed-chunk-242-1}
 
 \hypertarget{aesthetics}{%
 \section{Aesthetics}\label{aesthetics}}
@@ -5935,7 +5987,7 @@ You might want to influence the color of the bars in the graph such that the bar
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-243-1.pdf}
+\includegraphics[width=0.65\linewidth]{bookdown_files/figure-latex/unnamed-chunk-243-1}
 
 \begin{figure}
 \includegraphics[width=0.7\linewidth]{ch_graphing/images/mapping_fill} \caption{Adding a fill column to the internal data}\label{fig:addfill}
@@ -5964,7 +6016,7 @@ Fortunately, if we simply put ``mapping = aes(label = tomatoes\_aud)'' within th
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-244-1.pdf}
+\includegraphics[width=0.65\linewidth]{bookdown_files/figure-latex/unnamed-chunk-244-1}
 
 Notice that we have the same problem as before with the text being difficult to read because it overlaps with the bar. We add ``nudge\_y = 400'' to move the text higher than the boxoffice text/label. Don't forget the units used by nudge\_y are the units on the y-axis.
 
@@ -5983,7 +6035,9 @@ Notice that we have the same problem as before with the text being difficult to 
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-245-1.pdf}
+\includegraphics[width=0.65\linewidth]{bookdown_files/figure-latex/unnamed-chunk-245-1}
+
+\newpage
 
 \hypertarget{apa-style}{%
 \section{APA style}\label{apa-style}}
@@ -6007,7 +6061,7 @@ Use theme\_classic() to make the graph apear in APA style. We use theme\_classic
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-246-1.pdf}
+\includegraphics[width=0.65\linewidth]{bookdown_files/figure-latex/unnamed-chunk-246-1}
 
 \hypertarget{axes}{%
 \section{Axes}\label{axes}}
@@ -6036,7 +6090,7 @@ We use the coord\_cartesian() command to adjust range of axes. In the code below
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-247-1.pdf}
+\includegraphics[width=0.65\linewidth]{bookdown_files/figure-latex/unnamed-chunk-247-1}
 
 Note that if you had a continuous variable on the x-axis (we do not in this example), you could set the range of both the x- and y-axes like this:
 
@@ -6071,7 +6125,7 @@ We use the scale\_y\_continuous() command to adjust the ticks on the y-axis. We 
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-249-1.pdf}
+\includegraphics[width=0.65\linewidth]{bookdown_files/figure-latex/unnamed-chunk-249-1}
 
 Note that if you had a continuous variable on the x-axis (we do not in this example), you could set the ticks of the x-axis like the code below using scale\_x\_continuous:
 
@@ -6108,7 +6162,7 @@ We use the labs() command to set the labels for the x- and y-axes:
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-251-1.pdf}
+\includegraphics[width=0.65\linewidth]{bookdown_files/figure-latex/unnamed-chunk-251-1}
 
 \hypertarget{axis-values}{%
 \section{Axis values}\label{axis-values}}
@@ -6156,7 +6210,7 @@ The values along the x-axis come from the short\_title column which is a factor.
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-252-1.pdf}
+\includegraphics[width=0.65\linewidth]{bookdown_files/figure-latex/unnamed-chunk-252-1}
 
 \hypertarget{method-2-longer-label-columns}{%
 \subsubsection{Method 2: Longer label columns}\label{method-2-longer-label-columns}}
@@ -6186,7 +6240,7 @@ With our movie data we don't need to use scale\_x\_discrete() because we have a 
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-253-1.pdf}
+\includegraphics[width=0.65\linewidth]{bookdown_files/figure-latex/unnamed-chunk-253-1}
 
 \hypertarget{angle}{%
 \subsection{Angle}\label{angle}}
@@ -6218,7 +6272,7 @@ Use theme() to adjust the angle of x-axis labels. Notice, however, that the long
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-254-1.pdf}
+\includegraphics[width=0.65\linewidth]{bookdown_files/figure-latex/unnamed-chunk-254-1}
 
 \hypertarget{alignment}{%
 \subsection{Alignment}\label{alignment}}
@@ -6249,7 +6303,7 @@ Use theme() and the hjust argument to adjust the alignment of the x-axis labels.
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-255-1.pdf}
+\includegraphics[width=0.65\linewidth]{bookdown_files/figure-latex/unnamed-chunk-255-1}
 
 \hypertarget{order}{%
 \subsection{Order}\label{order}}
@@ -6291,7 +6345,7 @@ We can make the movie bars go left to right in lowest to highest box office rece
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-257-1.pdf}
+\includegraphics[width=0.65\linewidth]{bookdown_files/figure-latex/unnamed-chunk-257-1}
 
 \hypertarget{decreasing-order}{%
 \subsubsection{Decreasing order}\label{decreasing-order}}
@@ -6329,7 +6383,7 @@ We can make the movie bars go left to right in highest to lowest box office rece
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-259-1.pdf}
+\includegraphics[width=0.65\linewidth]{bookdown_files/figure-latex/unnamed-chunk-259-1}
 
 \hypertarget{custom-order}{%
 \subsubsection{Custom order}\label{custom-order}}
@@ -6373,7 +6427,7 @@ We can make the movie bars go left to right in a custom order by changing the fa
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics[width=0.85\linewidth]{ch_graphing/images/custom_order}
+\includegraphics[width=0.65\linewidth]{ch_graphing/images/custom_order}
 
 \hypertarget{legend-order}{%
 \subsection{Legend order}\label{legend-order}}
@@ -6411,7 +6465,7 @@ After inspecting the graph on the previous page, you might think that Marvel sho
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics[width=0.85\linewidth]{ch_graphing/images/custom_order2}
+\includegraphics[width=0.65\linewidth]{ch_graphing/images/custom_order2}
 
 \hypertarget{custom-colours}{%
 \section{Custom colours}\label{custom-colours}}
@@ -6446,7 +6500,7 @@ R colour names/pictures can be found here: \url{http://sape.inf.usi.ch/quick-ref
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics[width=0.85\linewidth]{ch_graphing/images/base_color_graph}
+\includegraphics[width=0.65\linewidth]{ch_graphing/images/base_color_graph}
 
 \hypertarget{hex-colours}{%
 \subsection{Hex colours}\label{hex-colours}}
@@ -6476,7 +6530,7 @@ If you are a really big geek (like me) you might look at the previous graph and 
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics[width=0.85\linewidth]{ch_graphing/images/logo_color_graph}
+\includegraphics[width=0.65\linewidth]{ch_graphing/images/logo_color_graph}
 
 \hypertarget{emoji}{%
 \section{Emoji}\label{emoji}}
@@ -6523,7 +6577,7 @@ If you scroll down to section 5 Uncategorized on this page you will find the cod
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics[width=0.85\linewidth]{ch_graphing/images/emoji_graph}
+\includegraphics[width=0.65\linewidth]{ch_graphing/images/emoji_graph}
 
 \hypertarget{accessible-colors}{%
 \section{Accessible Colors}\label{accessible-colors}}
@@ -6533,7 +6587,7 @@ The current version of the graph is much improved from where we started at the b
 Color blindness is an issue that affects approximately five percent of the population. A nuanced discussion of the different types of color blindness is beyond the scope of this chapter. We can, however, take a momement to think about every graph as being composed of two parts that work together to create the colors overall image. We can can there of there being a lightness (i.e., light vs.~dark) component and a hue component (e.g., magenta, yellow, etc.). Together these two components work together to create colors that we see. This distinction between lightness and hue is relevant to all images not just graphs \citep[see][]{margulis2005photoshop}.
 
 \begin{figure}
-\includegraphics[width=0.85\linewidth]{ch_graphing/images/nocolorcomparison} \caption{Color information (i.e., hue) removed from current graph}\label{fig:colorcomparison}
+\includegraphics[width=0.75\linewidth]{ch_graphing/images/nocolorcomparison} \caption{Color information (i.e., hue) removed from current graph}\label{fig:colorcomparison}
 \end{figure}
 
 Figure \ref{fig:colorcomparison}A presents our current graph whereas Figure \ref{fig:colorcomparison}B presents the same graph with the hue component removed. You can see that when the hue component is removed that the distinction between the Marvel and DC bars is also removed. The particular colors used to represent Marvel/DC differ in terms of hue but not lightness. Consequently, when we remove the hue component we are left with a graph, \ref{fig:colorcomparison}B, that does not differentiate between the two studios. In order for a color graph to be accessible to people with color blindness we need to pick colors that vary in terms of lightness as well as hue. We can do that with the help of the RColorBrewer package.
@@ -6607,7 +6661,7 @@ We can use a color palette by specifying its name within scale\_fill\_brewer(). 
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics[width=0.85\linewidth]{ch_graphing/images/emoji_graph4}
+\includegraphics[width=0.65\linewidth]{ch_graphing/images/emoji_graph4}
 
 \hypertarget{palette-subsets}{%
 \subsubsection{Palette subsets}\label{palette-subsets}}
@@ -6658,20 +6712,18 @@ We can put the two colors we want (\#1F78B4 and \#B2DF8A) on the graph by using 
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics[width=0.85\linewidth]{ch_graphing/images/emoji_graph5}
+\includegraphics[width=0.65\linewidth]{ch_graphing/images/emoji_graph5}
 
-Now that we have used a color-blind accessible palette in the graph we can look at the graph without the color component. In Figure \ref{fig:colorcomparison2}B, below, notice that the bars representing the two studio are easily distinguishable based on lightness alone. That is, the lightness graph in Figure \ref{fig:colorcomparison2}B demonstrates the new color-blind accessible colors vary in term of both hue and lightness - not just hue. Therefore, when the hue is removed the two colors are distinguishable. This makes the graph accessible to color-blind individuals.
+Now that we have used a color-blind accessible palette in the graph we can look at the graph without the hue component. In Figure \ref{fig:colorcomparison2}B, below, notice that the bars representing the two studio are easily distinguishable based on lightness alone. That is, the lightness graph in Figure \ref{fig:colorcomparison2}B demonstrates the new color-blind accessible colors vary in term of both hue and lightness - not just hue. Therefore, when the hue is removed the two colors are distinguishable. This makes the graph accessible to color-blind individuals.
 
 \begin{figure}
-\includegraphics[width=0.85\linewidth]{ch_graphing/images/nocolorcomparison2} \caption{Color information (i.e., hue) removed from new color-blind accessible graph}\label{fig:colorcomparison2}
+\includegraphics[width=0.75\linewidth]{ch_graphing/images/nocolorcomparison2} \caption{Color information (i.e., hue) removed from new color-blind accessible graph}\label{fig:colorcomparison2}
 \end{figure}
-
-\newpage
 
 \hypertarget{avoid-color}{%
 \subsection{Avoid color}\label{avoid-color}}
 
-When you only have two colors on a graph another option for creating an accessible graph is to remove the colors entirely and make a black and white graph. In the code below we use scale\_fill\_manual() with the values ``\#ffffff'' (white) and "``\#000000'' (black). The intent was to create bars that are white for Marvel and black for DC. Unfortunately, because the graph has a white back ground you can see this resulted in the Marvel bars disappearing.
+When you only have two colors on a graph another option for creating an accessible graph is to remove the colors entirely and make a black and white graph. In the code below we use scale\_fill\_manual() with the values ``\#ffffff'' (white) and "``\#000000'' (black). The intent was to create bars that are white for Marvel and black for DC. Unfortunately, because the graph has a white background you can see this resulted in the Marvel bars disappearing.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -6699,13 +6751,11 @@ When you only have two colors on a graph another option for creating an accessib
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics[width=0.85\linewidth]{ch_graphing/images/emoji_graph2}
-
-\newpage
+\includegraphics[width=0.65\linewidth]{ch_graphing/images/emoji_graph2}
 
 How do get around the Marvel bars disappearing when we use white?
 
-\textbf{Color vs.~fill.} The ggplot packages makes a distinction between \textbf{fill} and \textbf{color}. The term fill is used to refer to the inside color of bars. In contrast, \textbf{color} is used to the refer to the lines that outline the shape of each bar. In the prevous code we did not specify color. In the code below, we modify the geom\_col() command to geom\_col(color = ``black''). This change adds a black outline around all the bars -- including the ones with a white fill. You can see the result is a much improved graph. This black/white graph is accessible to everyone.
+\textbf{Color vs.~fill.} The ggplot packages makes a distinction between \textbf{fill} and \textbf{color}. The term fill is used to refer to the inside color of bars. In contrast, \textbf{color} is used to the refer to the lines that outline the shape of each bar. In the prevous code we used fill to change the colors of the bars but we did not use the ``color'' argrument in a command. In the code below, we modify the geom\_col() command to use the ``color'' argument. Specifically, we change geom\_col() to geom\_col(color = ``black''). This change adds a black outline around all the bars -- including the ones with a white fill. You can see the result is a much improved graph. This black/white graph is accessible to everyone.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -6733,7 +6783,7 @@ How do get around the Marvel bars disappearing when we use white?
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics[width=0.85\linewidth]{ch_graphing/images/emoji_graph3}
+\includegraphics[width=0.65\linewidth]{ch_graphing/images/emoji_graph3}
 
 \hypertarget{saving}{%
 \section{Saving}\label{saving}}
