--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -120,10 +120,11 @@ A good way to start every script is with a comment that includes the date of you
 # By: John Smith
 ```
 
-Note that in the above comment I used the internationally accepted date format\index{date format} order Year/Month/Day. Some people use the mnemonic *Your My Dream* to remember this order. Wikipedia provides more information about the [Internationally Date Format ISO 8601](https://en.wikipedia.org/wiki/ISO_8601).
+Moving forward, I suggest you use comments to make your own personal notes in your own code as your write it. Note that in the above comment I used the internationally accepted date format\index{date format} order Year/Month/Day. Some people use the mnemonic *Your My Dream* to remember this order. Wikipedia provides more information about the [Internationally Date Format ISO 8601](https://en.wikipedia.org/wiki/ISO_8601). This [xkcd](https://xkcd.com/1179/) cartoon is the focus of the date format:
 
-
-Moving forward, I suggest you use comments to make your own personal notes in your own code as your write it.
+```{r, echo = FALSE, out.width="40%"}
+knitr::include_graphics("ch_introduction/images/iso8601.png")
+```
 
 ### Background about the tidyverse
 
