--- a/06-graphing.Rmd
+++ b/06-graphing.Rmd
@@ -307,6 +307,12 @@ scale_x_continuous(breaks = seq(0, 3500, by = 500))
 
 ### Labels 
 
+Labels are an extremely important part of any graph. This fact is the focus of the [xkcd](https://xkcd.com/833/) cartoon below:
+
+```{r, echo = FALSE, out.width="80%"}
+knitr::include_graphics("ch_graphing/images/convincing.png")
+```
+
 We use the labs() command to set the labels for the x- and y-axes:
 
 ```{r, out.width="65%"}
