--- a/05-samples.Rmd
+++ b/05-samples.Rmd
@@ -130,7 +130,7 @@ head(many_samples, 10)
 Each row of many_samples represents a sample of 10 people. Each column of many_samples indicates a sample statistic. You can see that for each sample/row we indicate "n" (the sample size) and "sample.mean" (the mean of the population), and a few other statistics. Even though all the samples came from the same population you can see how the values in the sample.mean column vary across samples/rows. 
 
 
-```{r, eval = FALSE}
+```{r, eval = FALSE, echo=FALSE}
 pg <- ggplot(data = pop_data,
        mapping = aes(x = height)) +
   geom_density() +
