--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -269,11 +269,11 @@ I used the \textbf{knitr}\index{knitr} package \citep{xie2015} and the \textbf{b
 ##   graphics_4.0.2  grDevices_4.0.2 highr_0.8      
 ##   htmltools_0.4.0 jsonlite_1.6.1  knitr_1.28     
 ##   magrittr_1.5    markdown_1.1    methods_4.0.2  
-##   mime_0.9        packrat_0.5.0   Rcpp_1.0.5     
-##   rlang_0.4.7     rmarkdown_2.2   rstudioapi_0.11
-##   stats_4.0.2     stringi_1.4.6   stringr_1.4.0  
-##   tinytex_0.23    tools_4.0.2     utils_4.0.2    
-##   xfun_0.14       yaml_2.2.1
+##   mime_0.9        Rcpp_1.0.5      rlang_0.4.7    
+##   rmarkdown_2.2   rstudioapi_0.11 stats_4.0.2    
+##   stringi_1.4.6   stringr_1.4.0   tinytex_0.23   
+##   tools_4.0.2     utils_4.0.2     xfun_0.14      
+##   yaml_2.2.1
 \end{verbatim}
 
 Package names are in bold text (e.g., \textbf{rmarkdown}), and inline code and filenames are formatted in a typewriter font (e.g., \texttt{knitr::knit(\textquotesingle{}foo.Rmd\textquotesingle{})}). Function names are followed by parentheses (e.g., \texttt{bookdown::render\_book()}).
@@ -5171,31 +5171,6 @@ We use the head() command to see the first 10 rows (i.e., 10 samples of 5000 sam
 \end{verbatim}
 
 Each row of many\_samples represents a sample of 10 people. Each column of many\_samples indicates a sample statistic. You can see that for each sample/row we indicate ``n'' (the sample size) and ``sample.mean'' (the mean of the population), and a few other statistics. Even though all the samples came from the same population you can see how the values in the sample.mean column vary across samples/rows.
-
-\begin{Shaded}
-\begin{Highlighting}[]
-\NormalTok{pg <-}\StringTok{ }\KeywordTok{ggplot}\NormalTok{(}\DataTypeTok{data =}\NormalTok{ pop_data,}
-       \DataTypeTok{mapping =} \KeywordTok{aes}\NormalTok{(}\DataTypeTok{x =}\NormalTok{ height)) }\OperatorTok{+}
-\StringTok{  }\KeywordTok{geom_density}\NormalTok{() }\OperatorTok{+}
-\StringTok{  }\KeywordTok{coord_cartesian}\NormalTok{(}\DataTypeTok{xlim =} \KeywordTok{c}\NormalTok{(}\DecValTok{140}\NormalTok{, }\DecValTok{205}\NormalTok{)) }\OperatorTok{+}
-\StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Heights of Individuals"}\NormalTok{, }\DataTypeTok{y =} \StringTok{"Probability"}\NormalTok{) }\OperatorTok{+}
-\StringTok{  }\KeywordTok{scale_x_continuous}\NormalTok{(}\DataTypeTok{breaks =} \KeywordTok{seq}\NormalTok{(}\DecValTok{120}\NormalTok{, }\DecValTok{220}\NormalTok{, }\DataTypeTok{by =} \DecValTok{5}\NormalTok{)) }\OperatorTok{+}
-\StringTok{  }\KeywordTok{theme_classic}\NormalTok{()}
-
-
-\NormalTok{sdg <-}\StringTok{ }\KeywordTok{ggplot}\NormalTok{(}\DataTypeTok{data =}\NormalTok{ many_samples,}
-       \DataTypeTok{mapping =} \KeywordTok{aes}\NormalTok{(}\DataTypeTok{x =}\NormalTok{ sample.mean)) }\OperatorTok{+}
-\StringTok{  }\KeywordTok{geom_density}\NormalTok{(}\DataTypeTok{adjust =} \FloatTok{1.3}\NormalTok{) }\OperatorTok{+}
-\StringTok{  }\KeywordTok{coord_cartesian}\NormalTok{(}\DataTypeTok{xlim =} \KeywordTok{c}\NormalTok{(}\DecValTok{140}\NormalTok{, }\DecValTok{205}\NormalTok{)) }\OperatorTok{+}
-\StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Mean Height for each sample"}\NormalTok{, }\DataTypeTok{y =} \StringTok{"Probability"}\NormalTok{) }\OperatorTok{+}
-\StringTok{  }\KeywordTok{scale_x_continuous}\NormalTok{(}\DataTypeTok{breaks =} \KeywordTok{seq}\NormalTok{(}\DecValTok{120}\NormalTok{, }\DecValTok{220}\NormalTok{, }\DataTypeTok{by =} \DecValTok{5}\NormalTok{)) }\OperatorTok{+}
-\StringTok{  }\KeywordTok{theme_classic}\NormalTok{()}
-
-\KeywordTok{png}\NormalTok{(}\DataTypeTok{filename =} \StringTok{"ch_samples/images/bothdist.png"}\NormalTok{, }\DataTypeTok{width =} \DecValTok{12}\OperatorTok{*}\DecValTok{300}\NormalTok{, }\DataTypeTok{height =} \DecValTok{6}\OperatorTok{*}\DecValTok{300}\NormalTok{, }\DataTypeTok{res =} \DecValTok{300}\NormalTok{)}
-\NormalTok{gridExtra}\OperatorTok{::}\KeywordTok{grid.arrange}\NormalTok{(pg,sdg, }\DataTypeTok{nrow=}\DecValTok{2}\NormalTok{)}
-\KeywordTok{dev.off}\NormalTok{()}
-\end{Highlighting}
-\end{Shaded}
 
 \begin{figure}
 \includegraphics[width=29.4in]{ch_samples/images/sampling_dist} \caption[Sampling distribution of the mean.]{Sampling distribution of the mean. The population of individuals is presented at the top and filled with X's to remind you they are individuals. There are more individuals than X's. The sampling distribution of means is presented in the bottom part of the graph. The sampling distribution of means is filled with $\bar{x}$'s to remind you it is means being graphed. There are more means than $\bar{x}$'s. The population mean (green line) and the mean of sample means (blue line) are in the same spot, indicating high accuracy (i.e., no bias).}\label{fig:bothdist}
